--- a/Files/preseed.cfg
+++ b/Files/preseed.cfg
@@ -1,10 +1,19 @@
 #### Contents of the preconfiguration file (for stretch)
 ### Localization
 # Preseeding only locale sets language, country and locale.
+d-i debian-installer/locale string en_US.UTF-8
+
+d-i debconf/priority string critical
+
 d-i debian-installer/locale string en_US
+d-i debian-installer/language string en
+d-i console-setup/ask_detect boolean false
+d-i debian-installer/country string it
+d-i debian-installer/locale string en_US.UTF-8
+d-i console-setup/layoutcode string us
 
 # The values can also be preseeded individually for greater flexibility.
-#d-i debian-installer/language string en
+#d-i debian-installer/language string us
 #d-i debian-installer/country string NL
 #d-i debian-installer/locale string en_GB.UTF-8
 # Optionally specify additional locales to be generated.
@@ -26,13 +35,15 @@ d-i keyboard-configuration/xkb-keymap select us
 
 # netcfg will choose an interface that has link if possible. This makes it
 # skip displaying a list if there is more than one interface.
+
 d-i netcfg/choose_interface select auto
+
 
 
 
 # To set a different link detection timeout (default is 3 seconds).
 # Values are interpreted as seconds.
-#d-i netcfg/link_wait_timeout string 10
+d-i netcfg/link_wait_timeout string 10
 
 # If you have a slow dhcp server and the installer times out waiting for
 # it, this might be useful.
@@ -68,13 +79,17 @@ d-i netcfg/choose_interface select auto
 # Any hostname and domain names assigned from dhcp take precedence over
 # values set here. However, setting the values still prevents the questions
 # from being shown, even if values come from dhcp.
-d-i netcfg/get_hostname string unassigned-hostname
-d-i netcfg/get_domain string unassigned-domain
+d-i netcfg/disable_dhcp boolean true
+d-i netcfg/get_hostname string ubuntuhost
+netcfg/get_hostname seen false
+d-i netcfg/get_domain seen false
+d-i netcfg/get_domain string domain
+
 
 # If you want to force a hostname, regardless of what either the DHCP
 # server returns or what the reverse DNS entry for the IP is, uncomment
 # and adjust the following line.
-#d-i netcfg/hostname string somehost
+d-i netcfg/hostname string ubuntu
 
 # Disable that annoying WEP key dialog.
 d-i netcfg/wireless_wep string
@@ -121,29 +136,29 @@ d-i mirror/http/proxy string
 # Skip creation of a root account (normal user account will be able to
 # use sudo). The default is false; preseed this to true if you want to set
 # a root password.
-#d-i passwd/root-login boolean false
+d-i passwd/root-login boolean true
 # Alternatively, to skip creation of a normal user account.
 #d-i passwd/make-user boolean false
 
 # Root password, either in clear text
-#d-i passwd/root-password password r00tme
-#d-i passwd/root-password-again password r00tme
+#d-i passwd/root-password password gfd
+#d-i passwd/root-password-again password gfds
 # or encrypted using a crypt(3)  hash.
-#d-i passwd/root-password-crypted password [crypt(3) hash]
+d-i passwd/root-password-crypted password [VXRVU3.Dl/EMQ]
 
 # To create a normal user account.
-#d-i passwd/user-fullname string Ubuntu User
-#d-i passwd/username string ubuntu
+d-i passwd/user-fullname string User
+d-i passwd/username string user
 # Normal user's password, either in clear text
-#d-i passwd/user-password password insecure
-#d-i passwd/user-password-again password insecure
+#d-i passwd/user-password hghfg
+#d-i passwd/user-password-again hfg
 # or encrypted using a crypt(3) hash.
-#d-i passwd/user-password-crypted password [crypt(3) hash]
+d-i passwd/user-password-crypted password [VXRVU3.Dl/EMQ]
 # Create the first user with the specified UID instead of the default.
 #d-i passwd/user-uid string 1010
 # The installer will warn about weak passwords. If you are sure you know
 # what you're doing and want to override it, uncomment this.
-#d-i user-setup/allow-password-weak boolean true
+d-i user-setup/allow-password-weak boolean true
 
 # The user account will be added to some standard initial groups. To
 # override that, use this.
@@ -158,7 +173,7 @@ d-i clock-setup/utc boolean true
 
 # You may set this to any valid setting for $TZ; see the contents of
 # /usr/share/zoneinfo/ for valid values.
-d-i time/zone string US/Eastern
+d-i time/zone string Europe/Rome
 
 # Controls whether to use NTP to set the clock during the install
 d-i clock-setup/ntp boolean true
@@ -189,13 +204,17 @@ d-i clock-setup/ntp boolean true
 # name must be given in traditional, non-devfs format (so e.g. /dev/sda
 # and not e.g. /dev/discs/disc0/disc).
 # For example, to use the first SCSI/SATA hard disk:
-#d-i partman-auto/disk string /dev/sda
+d-i partman-auto/disk string /dev/sda
 # In addition, you'll need to specify the method to use.
 # The presently available methods are:
 # - regular: use the usual partition types for your architecture
 # - lvm:     use LVM to partition the disk
 # - crypto:  use LVM within an encrypted partition
-d-i partman-auto/method string lvm
+d-i partman-auto/method string regular
+
+#unmount /dev/sda
+d-i partman/unmount_active boolean true
+d-i preseed/early_command string umount /media
 
 # If one of the disks that are going to be automatically partitioned
 # contains an old LVM configuration, the user will normally receive a
@@ -367,23 +386,23 @@ d-i partman/confirm_nooverwrite boolean true
 
 
 ### Package selection
-tasksel tasksel/first multiselect ubuntu-desktop
-#tasksel tasksel/first multiselect lamp-server, print-server
+#tasksel tasksel/first multiselect ubuntu-desktop
+tasksel tasksel/first multiselect ssh-server
 #tasksel tasksel/first multiselect kubuntu-desktop
 
 # Individual additional packages to install
-#d-i pkgsel/include string openssh-server build-essential
+d-i pkgsel/include string openssh-server build-essential
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
 #d-i pkgsel/upgrade select none
 
 # Language pack selection
-#d-i pkgsel/language-packs multiselect de, en, zh
+d-i pkgsel/language-packs multiselect en, it
 
 # Policy for applying updates. May be "none" (no automatic updates),
 # "unattended-upgrades" (install security updates automatically), or
 # "landscape" (manage system with Landscape).
-#d-i pkgsel/update-policy select none
+d-i pkgsel/update-policy select 
 
 # Some versions of the installer can report back on what software you have
 # installed, and what software you use. The default is not to report back,
@@ -415,7 +434,7 @@ d-i grub-installer/with_other_os boolean true
 
 # Due notably to potential USB sticks, the location of the MBR can not be
 # determined safely in general, so this needs to be specified:
-#d-i grub-installer/bootdev  string /dev/sda
+d-i grub-installer/bootdev  string /dev/sda
 # To install to the first device (assuming it is not a USB stick):
 #d-i grub-installer/bootdev  string default
 
