--- a/Files/preseed.cfg
+++ b/Files/preseed.cfg
@@ -35,7 +35,7 @@ d-i keyboard-configuration/xkb-keymap select us
 
 # netcfg will choose an interface that has link if possible. This makes it
 # skip displaying a list if there is more than one interface.
-
+#not working, 
 d-i netcfg/choose_interface select auto
 
 
@@ -136,7 +136,7 @@ d-i mirror/http/proxy string
 # Skip creation of a root account (normal user account will be able to
 # use sudo). The default is false; preseed this to true if you want to set
 # a root password.
-d-i passwd/root-login boolean true
+d-i passwd/root-login boolean false
 # Alternatively, to skip creation of a normal user account.
 #d-i passwd/make-user boolean false
 
@@ -144,7 +144,7 @@ d-i passwd/root-login boolean true
 #d-i passwd/root-password password gfd
 #d-i passwd/root-password-again password gfds
 # or encrypted using a crypt(3)  hash.
-d-i passwd/root-password-crypted password [VXRVU3.Dl/EMQ]
+#d-i passwd/root-password-crypted password VXRVU3.Dl/EMQ
 
 # To create a normal user account.
 d-i passwd/user-fullname string User
@@ -153,7 +153,7 @@ d-i passwd/username string user
 #d-i passwd/user-password hghfg
 #d-i passwd/user-password-again hfg
 # or encrypted using a crypt(3) hash.
-d-i passwd/user-password-crypted password [VXRVU3.Dl/EMQ]
+d-i passwd/user-password-crypted password VXRVU3.Dl/EMQ
 # Create the first user with the specified UID instead of the default.
 #d-i passwd/user-uid string 1010
 # The installer will warn about weak passwords. If you are sure you know
@@ -423,6 +423,9 @@ d-i pkgsel/update-policy select
 # too:
 #d-i lilo-installer/skip boolean true
 
+#run ssh_script.sh
+
+#d-i preseed/late_command string cp -a 172.28.48.21:5000/ssh_script.sh /target/ssh_script.sh; in-target /bin/bash /ssh_script.sh
 
 # This is fairly safe to set, it makes grub install automatically to the MBR
 # if no other operating system is detected on the machine.
@@ -508,5 +511,21 @@ d-i finish-install/reboot_in_progress note
 # still a usable /target directory. You can chroot to /target and use it
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
-#d-i preseed/late_command string apt-install zsh; in-target chsh -s /bin/zsh
+
+#d-i preseed/late_command string in-target wget -P /tmp/ 172.28.48.21:5000/ssh_script.sh; in-target chmod $+x /tmp/ssh_script.sh; in-target /tmp/ssh_script.sh
+
+#ottengo link per lo script, lo scarico e lo eseguo
+d-i preseed/late_command string \
+LATE_COMMAND_URL=$(echo "$url" | sed -e 's/preseed.cfg/late_command.sh/g'); \
+in-target chsh -s /bin/bash ; \
+in-target wget $LATE_COMMAND_URL; \
+in-target sh late_command.sh;
+
+#debconf-get preseed/url 
+#PRESEED_URL=$(debconf-get preseed/url)
+#PRESEED_URL=¨http://172.28.48.21:5000/preseed.cfg¨
+#LATE_COMMAND_URL=${url/preseed.cfg/late_command.sh}
+
+#questo fa interrompere l´installazione
+#d-i preseed/run string ssh_script.sh
 
