--- a/Ansible/roles/openstack_env/tasks/openstack_env.yml
+++ b/Ansible/roles/openstack_env/tasks/openstack_env.yml
@@ -49,7 +49,7 @@
 - name: create vm
   os_server:
     state: present
-    name: webserver
+    name: webserver1
     image: Ubuntu 18.04 (Bionic) (user:ubuntu) 
     key_name: priv
     availability_zone: compute-5-6-7-8
@@ -57,14 +57,10 @@
     flavor: 2-2-10
     auto_floating_ip: yes
     network: web-server-net
-    meta: 
-     groups: webserver 
-
-- name: wait for ssh
-  pause:
-    seconds: 30
+    meta:
+      groups: webserver
 
 
 #TO DO
-# TRY create vm with fixet ip with os_port
+# TRY create vm with fixed ip with os_port
 
