--- a/Ansible/site.yml
+++ b/Ansible/site.yml
@@ -7,9 +7,8 @@
     - localhost
     - all
   gather_facts: no
+
   tasks:
-
-
     - name: show all the hosts
       debug:
         msg: "Available hosts: {{ item }}"
@@ -33,7 +32,14 @@
         delay: 10
       connection: local
 
+- name: Install python
+  hosts: webserver
+  become: yes
+  gather_facts: no
+  pre_tasks:
+    - name: "install python"
+      raw: 'sudo apt-get -y install python'
 
-#- include: deploy2.yml
+- include: deploy2.yml
 
 
