--- a/Ansible/roles/openstack_env/defaults/main.yml
+++ b/Ansible/roles/openstack_env/defaults/main.yml
@@ -1,2 +1,24 @@
 ---
 # defaults file for openstack_env
+
+# network variables
+openstack_network_name: web-server-net
+openstack_subnet_name: web-server-sub
+openstack_cidr: 192.168.1.0/24
+openstack_dns: 8.8.8.8
+openstack_router_name: router1
+openstack_security_group_name: web-server-security
+openstack_security_group_description: Security group for nginx webserver
+
+# ssh variables
+openstack_key_name: my_key
+#name of key in roles/openstack_env/files
+openstack_key_name_file: nuova.pub
+
+#istance variables (vm_name and meta_groups must be different)
+openstack_vm_name: webserver1 
+openstack_image_name: Ubuntu 18.04 (Bionic) (user:ubuntu)
+openstack_availability_zone: compute-5-6-7-8
+openstack_flavor: 2-2-10
+
+openstack_meta_group: webserver
