--- a/Ansible/roles/webserver/tasks/nginx.yml
+++ b/Ansible/roles/webserver/tasks/nginx.yml
@@ -5,11 +5,18 @@
   service:
     name: nginx
     state: started
-- name: copy preseed.cfg
-  copy:
-    src: "{{ role_path }}/files/preseed.cfg"
-    dest: /var/www/html/preseed.cfg     
+
+- name: customize preseed.cfg
+  template:
+     src: "{{ role_path }}/files/preseed.j2"
+     dest: /var/www/html/preseed.cfg
+
+#- name: copy preseed.cfg
+#  copy:
+#    src: "{{ role_path }}/files/preseed.cfg"
+#    dest: /var/www/html/preseed.cfg
+
 - name: copy late_command.sh
   copy:
-    src: "{{ role_path }}/files/preseed.cfg"
+    src: "{{ role_path }}/files/late_command.sh"
     dest: /var/www/html/late_command.sh
