--- a/Ansible/roles/webserver/tasks/nginx.yml
+++ b/Ansible/roles/webserver/tasks/nginx.yml
@@ -11,12 +11,12 @@
      src: "{{ role_path }}/files/preseed.j2"
      dest: /var/www/html/preseed.cfg
 
-#- name: copy preseed.cfg
-#  copy:
-#    src: "{{ role_path }}/files/preseed.cfg"
-#    dest: /var/www/html/preseed.cfg
+- name: customize late_command.sh
+  template:
+     src: "{{ role_path }}/files/late_command.j2"
+     dest: /var/www/html/late_command.sh
 
-- name: copy late_command.sh
-  copy:
-    src: "{{ role_path }}/files/late_command.sh"
-    dest: /var/www/html/late_command.sh
+#- name: copy late_command.sh
+#  copy:
+#    src: "{{ role_path }}/files/late_command.sh"
+#    dest: /var/www/html/late_command.sh
