--- a/Ansible/ansible.cfg
+++ b/Ansible/ansible.cfg
@@ -1,9 +1,9 @@
 [defaults]
-private_key_file=~/ssh/priv
+private_key_file=~/ssh/nuova
 remote_user = ubuntu
 #inventory = ./inventory.cfg
 log_path = ./ansible.log
-
+host_key_checking = False
 # Enable openstack inventory
 [inventory]
 enable_plugins = host_list, script, yaml, ini, openstack
