--- a/Ansible/roles/openstack_env/meta/main.yml
+++ b/Ansible/roles/openstack_env/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
-  description: your description
-  company: your company (optional)
+  author: Francesco Gionghi
+  description: setup openstack environment for a nginx webserver
+  company: Fbk create-net
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
