--- a/Ansible/roles/webserver/meta/main.yml
+++ b/Ansible/roles/webserver/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
-  description: your description
-  company: your company (optional)
+  author: Francesco Gionghi
+  description: set up nginx with a preseed and a script for automatic linux installation
+  company: Fbk create-net
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -14,7 +14,7 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
+  license: license (Apache)
 
   min_ansible_version: 2.4
 
@@ -35,19 +35,19 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
-  # - name: SomePlatform
+  platforms:
+    - name: Ubuntu
+      versions:
+        - 16.04
+        - 18.04
+  #- name: Debian
   #   versions:
   #   - all
   #   - 1.0
   #   - 7
   #   - 99.99
 
-  galaxy_tags: []
+  #galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
@@ -55,6 +55,6 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
 
-dependencies: []
+#dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
