--- a/Ansible/roles/webserver/defaults/debian-9.0.yml
+++ b/Ansible/roles/webserver/defaults/debian-9.0.yml
@@ -3,4 +3,4 @@ preseed_archive_mirror: ftp.it.debian.org
 preseed_taskfirst: 
   - ssh-server
   - kde-desktop
-preseed_archive_mirror_directory: /debian
+preseed_archive_mirror_directory: /debian/
