--- a/Ansible/roles/webserver/defaults/debian-edge.yml
+++ b/Ansible/roles/webserver/defaults/debian-edge.yml
@@ -4,4 +4,4 @@ preseed_early_command: "umount /media"
 preseed_taskfirst: 
   - ssh-server
 
-preseed_archive_mirror_directory: /debian
+preseed_archive_mirror_directory: /debian/
