--- a/Ansible/roles/webserver/defaults/debian-9.0.yml
+++ b/Ansible/roles/webserver/defaults/debian-9.0.yml
@@ -4,3 +4,6 @@ preseed_taskfirst:
   - ssh-server
   - kde-desktop
 preseed_archive_mirror_directory: /debian/
+
+#need to obtain the link of late_command
+preseed_filename = preseed-debian.cfg
