--- a/Ansible/roles/webserver/defaults/ubuntu-18.04.yml
+++ b/Ansible/roles/webserver/defaults/ubuntu-18.04.yml
@@ -7,3 +7,6 @@ preseed_taskfirst:
   - ubuntu-desktop
 
 preseed_archive_mirror_directory: /ubuntu/
+
+#need to obtain the link of late_command
+preseed_filename = preseed-ubuntu.cfg
