--- a/Ansible/roles/webserver/defaults/ubuntu-edge.yml
+++ b/Ansible/roles/webserver/defaults/ubuntu-edge.yml
@@ -6,3 +6,5 @@ preseed_taskfirst:
 
 preseed_archive_mirror_directory: /ubuntu/
 
+#need to obtain the link of late_command
+preseed_filename = preseed-ubuntu-edge.cfg
