--- a/Files/debian_preseed.cfg
+++ b/Files/debian_preseed.cfg
@@ -116,7 +116,7 @@ d-i netcfg/wireless_wep string
 # If you select ftp, the mirror/country string does not need to be set.
 #d-i mirror/protocol string ftp
 d-i mirror/country string manual
-d-i mirror/http/hostname string archive.ubuntu.com
+d-i mirror/http/hostname string ftp.it.debian.org/debian/
 d-i mirror/http/directory string /ubuntu
 d-i mirror/http/proxy string
 
@@ -214,7 +214,7 @@ d-i partman-auto/method string regular
 
 #unmount /dev/sda
 d-i partman/unmount_active boolean true
-d-i preseed/early_command string umount /media
+#d-i preseed/early_command string umount /media
 
 # If one of the disks that are going to be automatically partitioned
 # contains an old LVM configuration, the user will normally receive a
