--- a/Files/ubuntu_preseed.cfg
+++ b/Files/ubuntu_preseed.cfg
@@ -214,7 +214,7 @@ d-i partman-auto/method string regular
 
 #unmount /dev/sda
 d-i partman/unmount_active boolean true
-d-i preseed/early_command string umount /media
+#d-i preseed/early_command string umount /media
 
 # If one of the disks that are going to be automatically partitioned
 # contains an old LVM configuration, the user will normally receive a
